--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
   <version>1.3-SNAPSHOT</version>
   <name>consumerBanking</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>2.4.0</version>
+         
+      </plugin>
+    </plugins>
+  </build>
+  
+  
+  
+  
+  
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
